# webserv

./: .gitignore  CMakeLists.txt  Config.cpp  Config.hpp  HTTP.cpp  HTTP.hpp  HTTPHeaderField.hpp  HTTPMethod.cpp  HTTP_method.cpp  HTTP_req.cpp  HTTP_res.cpp  HeaderFieldInfo.cpp  HeaderFieldInfo.hpp  Makefile  RequestMessage.cpp  RequestMessage.hpp  Server.cpp  Server.hpp  Server_kqueue.cpp  Server_method.cpp  Server_socket.cpp  SocketContoller_kqueue.cpp  SocketController.cpp  SocketController.hpp  SocketController_kqueue.cpp  a  a.out  index.html  index1.html  jeokim_test.conf  main.cpp  sadf  seungoh_test.conf  test.conf  utils.cpp  utils.hpp  webserv
CGIInterface/: CGIInterface.cpp  CGIInterface.hpp
CGInterface/: CGInterface.cpp  CGInterface.hpp
HTTP/: HTTP.cpp  HTTP.hpp  HTTPHeaderField.hpp  HTTP_CGI.cpp  HTTP_Chunk.cpp  HTTP_Chunk.hpp  HTTP_req.cpp  HTTP_req2.cpp  HTTP_res.cpp
Server/: Server.cpp  Server.hpp  Server_cgi.cpp  Server_define.hpp  Server_kqueue.cpp  Server_method.cpp  Server_reqHeader.cpp  Server_socket.cpp  Server_uriParser.cpp  Server_utils.cpp
Server/ContentType/: ContentType.cpp  ContentType.hpp
Server/URIParser/: URIParser.cpp  URIParser.hpp
YoupiBanane/: index.html  youpi.bla
YoupiBanane/post_body/: index.html  youpi.bad_extension
YoupiBanane/put_test/: index.html  youpi.bad_extension
autoindex/: AutoIndex.cpp  AutoIndex.hpp
chunk_test/: Makefile  chunk_test  chunk_test.cpp
config/: Config.cpp  Config.hpp  ServerBlock.cpp  ServerBlock.hpp  constant.h  util.h
jeokim/jeokim_request_parse/: reqHeaderParse.cpp
jeokim_request_parse/: a.out  reqHeaderParse.cpp  request_header_test_case1  request_parse_test.cpp
next/: RequestMessage.cpp  RequestMessage.hpp  ResponseMessage.cpp  ResponseMessage.hpp
only_cgi_server/: Makefile  a.out  cgi  chunk_normal  content_normal  onli_cgi-server.cpp
practice/: header.h  httpd.c  main.c
request_test/: Makefile  chunk_test  chunk_test.cpp  request_test.cpp
request_test/test_cases/: chunk_normal  chunk_zerolen  content_normal  error  nobody
test/: AutoIndex_test.cc  Config_test.cc
utils/: utils.cpp
